--- a/images/chan-hoi-re-chan-phao/config.ini
+++ b/images/chan-hoi-re-chan-phao/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-hoi-re-chan-phao.html
 lastopen = 2024-06-09 22:50:47
 
 [search]
-lastsearch = 2024-07-21 03:28:00
+lastsearch = 2024-07-21 04:29:30
 
 [www.dem365.vn]
-match = -81.0%%
-title = Chăn Phao Siêu Nhẹ Mẫu Mã Đa Dạng - Chăn Ga Gối Đệm 365
-url = https://www.dem365.vn/chan/chan-phao-mau-ma-da-dang-de-lua-chon/
+match = -61.9%%
+title = Chăn Giá Rẻ Chăn Phao Siêu Nhẹ - Chăn Ga Gối Đệm 365
+url = https://www.dem365.vn/chan-gia-re-chan-phao-sieu-nhe/
 
 [www.demgiare.net]
 match = -4.8%%
@@ -42,9 +42,9 @@ title = Chăn Phao Siêu Nhẹ Mùa đông Giá Tốt T07/2024
 url = https://www.lazada.vn/tag/chan-phao-sieu-nhe-mua-dong/
 
 [docauquanghuy.com]
-match = -9.5%%
-title = Bán buôn chân phao cuống phao câu cá
-url = http://docauquanghuy.com/chi-tiet-do-cau-ca-560/Ban-buon-chan-phao-cuong-phao-cau-ca.aspx
+match = -33.3%%
+title = Chặn phao
+url = http://docauquanghuy.com/chi-tiet-do-cau-ca-365/Chan-phao.aspx
 
 [www.diepxuan.com]
 match = 90.5%%
