--- a/images/chieu-gap-dai-loan-16/config.ini
+++ b/images/chieu-gap-dai-loan-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-16.html
 lastopen = 2024-06-09 21:46:43
 
 [search]
-lastsearch = 2024-07-21 01:35:09
+lastsearch = 2024-07-21 04:33:59
 
 [www.diepxuan.com]
 match = 14.3%%
@@ -22,8 +22,8 @@ title = Đài Loan vớt 16 thi thể, nghi toàn người Việt trong đườn
 url = https://www.voatiengviet.com/a/7026996.html
 
 [www.youtube.com]
-match = -114.3%%
-title = Phi Đội F-16V Tinh Nhuệ Của Đài Loan: Lời Cảnh Báo Đanh ...
+match = -90.5%%
+title = Phi Đội F-16V Tinh Nhuệ Của Đài Loan: Lời Cảnh Báo ...
 url = https://www.youtube.com/watch?v=XMZHfpjUzhg
 
 [m.facebook.com]
