--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-07-21 00:53:11
+lastsearch = 2024-07-21 04:28:45
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -63,8 +63,8 @@ url = https://moveek.com/rap/lotte-kosmo-tay-ho/
 
 [baolongan.vn]
 match = -31.2%%
-title = Nhớ nghề dệt chiếu quê tôi
-url = https://baolongan.vn/nho-nghe-det-chieu-que-toi-a168262.html
+title = Giữ nghề dệt chiếu Long Cang
+url = https://baolongan.vn/giu-nghe-det-chieu-long-cang-a169502.html
 
 [www.youtube.com]
 match = -200.0%%
@@ -72,9 +72,9 @@ title = Bán Trà Đá 15K Chơi Chiêu Tráo 500K Đụng Ngay Con Trai ...
 url = https://www.youtube.com/watch?v=MIO-5nY_e5g
 
 [books.google.com]
-match = -231.2%%
-title = Tan tu kinh: Ou, Le livre des phrases de trois caractères, ...
-url = https://books.google.com/books?id=oBfqEAAAQBAJ&pg=PA307-IA40&lpg=PA307-IA40&dq=chieu+lac+soc+16&source=bl&ots=DTBjZBMyX7&sig=ACfU3U25YlI2i8627MEO9L27XV6hiWoh7Q&hl=en&sa=X&ved=2ahUKEwjcqpLil7aHAxWLEFkFHTbACTUQ6AF6BAgcEAM
+match = -143.8%%
+title = Chiến sĩ Cộng Hòa - Page 19 - Google Books Result
+url = https://books.google.com/books?id=X2clAAAAMAAJ&pg=RA9-PA19&lpg=RA9-PA19&dq=chieu+lac+soc+16&source=bl&ots=p30QVE31Ku&sig=ACfU3U0UFiQmeE0JeC36quvfpUa2Tr_doQ&hl=en&sa=X&ved=2ahUKEwjcnsX5x7aHAxWxJzQIHeEMDkEQ6AF6BAgfEAM
 
 [dantocmiennui.vn]
 match = -125.0%%
