--- a/images/chieu-lac-soc-18/config.ini
+++ b/images/chieu-lac-soc-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-18.html
 lastopen = 2024-06-06 16:53:55
 
 [search]
-lastsearch = 2024-07-21 02:45:11
+lastsearch = 2024-07-21 04:28:11
 
 [scholar.google.com]
 match = -43.8%%
@@ -117,9 +117,9 @@ title = Tin tức 24h tối 18/7: Mâu thuẫn, em trai bị anh ruột dùng hu
 url = https://www.youtube.com/watch?v=hteDrQdI8UA
 
 [books.google.com]
-match = -218.8%%
-title = Gazetteer to AMS 1:250,000 Maps of Indochina (series L509).
-url = https://books.google.com/books?id=3gZclKX0dQYC&pg=PA272&lpg=PA272&dq=chieu+lac+soc+18&source=bl&ots=LZu6UVdASf&sig=ACfU3U0SIoAY_vd2Cq-uXy_9nSEWl8GnOQ&hl=en&sa=X&ved=2ahUKEwjl766HnrWHAxVhGlkFHW7YDDkQ6AF6BAgdEAM
+match = -243.8%%
+title = Địa chí Bá̆c Giang di sản hán nôm - Page 241 - Google Books Result
+url = https://books.google.com/books?id=aYBuAAAAMAAJ&pg=PA241&lpg=PA241&dq=chieu+lac+soc+18&source=bl&ots=oMfBzduWkz&sig=ACfU3U0kzvkWc75G3_O6vM8WeUtJw5Mvig&hl=en&sa=X&ved=2ahUKEwj-tczpx7aHAxXHJzQIHY1iDhcQ6AF6BAgfEAM
 
 [tuanhiep.com.vn]
 match = -56.2%%
