--- a/images/nem-sieu-nhe-9f-16/config.ini
+++ b/images/nem-sieu-nhe-9f-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-16.html
 lastopen = 2024-06-10 00:30:12
 
 [search]
-lastsearch = 2024-07-21 00:20:05
+lastsearch = 2024-07-21 04:27:05
 
 [www.instagram.com]
-match = -50.0%%
-title = NEM Furniture JSC (@nemfurniturejsc)
-url = https://www.instagram.com/nemfurniturejsc/?hl=en
+match = -144.4%%
+title = Thùy Ngân (@huuloc861) • Instagram photos and videos
+url = https://www.instagram.com/huuloc861/
 
 [www.lazada.vn]
 match = -61.1%%
@@ -17,9 +17,9 @@ title = Orangesky Cần Câu Cá Biển Yuantou ...
 url = https://www.lazada.vn/products/orangesky-can-cau-ca-bien-yuantou-can-cau-ca-yuantou-sieu-nhe-can-nem-can-cau-ca-yuantou-i2413511947.html
 
 [www.facebook.com]
-match = -83.3%%
-title = BỐN MÙA LÀM NAIL MINNESOTA | Nem chua $16/lb
-url = https://www.facebook.com/groups/525078490925002/posts/nem-chua-16lb507-571-2922pickup-st-paulshakopeesavage-plymouth-thứ-3-4-5/7207582679341183/
+match = -155.6%%
+title = Nghi Ngờ Chồng "Ăn Nem" Với Bạn Thân Và Sự Thật Phía Sau
+url = https://www.facebook.com/msmile2022/videos/nghi-ngờ-chồng-ăn-nem-với-bạn-thân-và-sự-thật-phía-sau/1055228991798802/
 
 [thegioinem.com]
 match = -116.7%%
@@ -52,9 +52,9 @@ title = NƯỚC MẮM NAM NGƯ SIÊU TIẾT KIỆM 800ML
 url = https://lanchi.vn/san-pham/nuoc-mam-nam-ngu-sieu-tiet-kiem-800ml/
 
 [www.tiktok.com]
-match = -155.6%%
-title = ✨Full Recipe⬇️ Gỏi Ngó Sen Tôm- Shrimp Lotus Root Salad ...
-url = https://www.tiktok.com/@jphamskitchen/video/7251801795452947758
+match = 0.0%%
+title = Sony Dsc T70 Setting
+url = https://www.tiktok.com/discover/sony-dsc-t70-setting
 
 [thuvienphapluat.vn]
 match = -133.3%%
