--- a/images/bo-ga-chun-chan-lua-warmdream-2m-22-hq/config.ini
+++ b/images/bo-ga-chun-chan-lua-warmdream-2m-22-hq/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-lua-warmdream-2m-22-hq.html
 lastopen = 2024-06-09 23:45:19
 
 [search]
-lastsearch = 2024-07-20 22:48:06
+lastsearch = 2024-07-21 04:49:25
 
 [www.museum.ru]
 match = 2.9%%
@@ -40,4 +40,9 @@ url = https://www.facebook.com/djbrianbooi123/videos/tb-galaxy-indoor-vattanac-e
 match = -13.2%%
 title = SUAN LUM NIGHT BAZAAR (2024) All You Need to Know ...
 url = https://www.tripadvisor.com.sg/Attraction_Review-g293916-d9606514-Reviews-Suan_Lum_Night_Bazaar-Bangkok.html
+
+[shopee.vn]
+match = 7.9%%
+title = bộ chăn ga gối lụa giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=bộ chăn ga gối lụa
 
