--- a/images/chieu-dieu-hoa-khong-goi-14/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-14.html
 lastopen = 2024-06-09 22:26:37
 
 [search]
-lastsearch = 2024-07-21 03:12:42
+lastsearch = 2024-07-21 04:49:16
 
 [shopee.vn]
-match = -14.8%%
-title = Chiếu điều hòa (không kèm vỏ gối) sợi mây 2 lớp chất ...
-url = https://shopee.vn/Chiếu-điều-hòa-(không-kèm-vỏ-gối)-sợi-mây-2-lớp-chất-lượng-cao-Minh-Nhật-–-Sang-trọng-mềm-mại-thoáng-mát-i.319365577.9030851250
+match = 18.5%%
+title = Chiếu Điều Hòa Giá Tốt, Chất Lượng, Đảm Bảo
+url = https://shopee.vn/list/chiếu điều hòa
 
 [demxanh.com]
 match = 14.8%%
@@ -22,9 +22,9 @@ title = Chiếu điều hòa có mát không? Review 10 ...
 url = https://tiki.vn/blog/chieu-dieu-hoa/
 
 [foreverbedding.net]
-match = -59.3%%
-title = Những Thông Tin Cần Biết Khi Mua Chiếu Điều Hoà Cao Su ...
-url = https://foreverbedding.net/chieu-dieu-hoa-cao-su-non-la-gi
+match = 0.0%%
+title = Nằm Chiếu Điều Hòa Có Mát Không? - Forever Bedding
+url = https://foreverbedding.net/nam-chieu-dieu-hoa-co-mat-khong
 
 [kyoryo.vn]
 match = -40.7%%
@@ -73,8 +73,8 @@ url = https://3dthinking.vn/tim-hieu-chieu-dieu-hoa-gia-bao-nhieu-chat-lieu-the-
 
 [www.youtube.com]
 match = -44.4%%
-title = SỰ THẬT| Chiếu điều hòa tencel - Chiếu cao su non có mát ...
-url = https://www.youtube.com/watch?v=OShfCNiOmA8
+title = HÀNG GIẢM GIÁ - Chiếu điều hòa nhật 2 mặt - nằm êm ngủ ...
+url = https://www.youtube.com/watch?v=fhwNXjU32Ww
 
 [lybalansieucute.com]
 match = 33.3%%
