--- a/images/chieu-lac-d2-09/config.ini
+++ b/images/chieu-lac-d2-09/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-09.html
 lastopen = 2024-06-21 06:29:43
 
 [search]
-lastsearch = 2024-07-21 02:48:29
+lastsearch = 2024-07-21 04:46:48
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -77,9 +77,9 @@ title = Học cờ vua nâng cao
 url = https://www.cothongminh.com/tai-lieu-hoc-co-vua/26-hoc-co-vua-nang-cao?start=3
 
 [www.facebook.com]
-match = -30.0%%
-title = 29 tháng 2
-url = https://www.facebook.com/photo.php?fbid=925380399591113&id=100063574839369&set=a.647966903999132&locale=vi_VN
+match = -180.0%%
+title = Bệnh Viện Hoàn Mỹ Minh Hải - NỘI SOI LẤY DỊ VẬT ...
+url = https://www.facebook.com/photo.php?fbid=732691348858537&id=100063530351491&set=a.536813015113039&locale=is_IS
 
 [duhocdoubleh.edu.vn]
 match = -193.3%%
@@ -410,4 +410,9 @@ url = https://saca.com.vn/en/khoi-tranh-giai-golf-tranh-cup-signify-thuong-hieu-
 match = -40.0%%
 title = Tra cứu đối tượng truy nã
 url = https://vpcqcsdt.bocongan.gov.vn/Truy-nã-TP/Tra-cứu
+
+[bongban.org]
+match = -166.7%%
+title = Tưng bừng khai trương câu lạc bộ Adidas Thanh Xuân
+url = https://bongban.org/threads/tung-bung-khai-truong-cau-lac-bo-adidas-thanh-xuan.17834/
 
