--- a/images/chieu-truc-que-lam-loai-1-16-20/config.ini
+++ b/images/chieu-truc-que-lam-loai-1-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-que-lam-loai-1-16-20.html
 lastopen = 2024-06-09 23:23:20
 
 [search]
-lastsearch = 2024-07-21 02:25:57
+lastsearch = 2024-07-21 04:49:05
 
 [thegioidemviet.vn]
 match = 38.7%%
@@ -12,14 +12,14 @@ title = Bảng Giá Chiếu Trúc Quế Lâm [Chính hãng
 url = https://thegioidemviet.vn/chieu-truc-que-lam/
 
 [chieutrelanlan.com]
-match = 29.0%%
-title = Chiếu trúc Quế Lâm không viền màu trắng 160x200cm
-url = https://chieutrelanlan.com/chieu-truc-que-lam-khong-vien-mau-trang-160x200cm-72.html
+match = 12.9%%
+title = Chiếu trúc mắt nhỏ không viền màu đen 120x190cm
+url = https://chieutrelanlan.com/chieu-truc-cao-cap-mat-nho-loai-khong-vien-mau-den-120x190cm-29.html
 
 [shopee.vn]
-match = 0.0%%
-title = chiếu trúc cao cấp giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=chiếu trúc cao cấp
+match = -3.2%%
+title = Chiếu trúc - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
+url = https://shopee.vn/list/chiếu/trúc
 
 [tiki.vn]
 match = -6.5%%
@@ -47,9 +47,9 @@ title = Chiếu trúc quế lâm loại 1 16 20
 url = https://www.diepxuan.com/chieu-truc-que-lam-loai-1-16-20.html
 
 [www.facebook.com]
-match = 5.9%%
-title = Chiếu Tre Lan Lan
-url = https://www.facebook.com/chieutruclanlan/
+match = -31.6%%
+title = Thế Giới Chiếu Trúc
+url = https://www.facebook.com/thegioichieutruc/
 
 [www.dienmayxanh.com]
 match = -29.0%%
@@ -80,4 +80,9 @@ url = https://developers.cloudflare.com/waf/tools/scrape-shield/email-address-ob
 match = -16.1%%
 title = Chợ Đình Thôn - Mỹ Đình | 🍀🍀CHIẾU TRÚC HẠT QUẾ LÂM
 url = https://m.facebook.com/groups/197076521629663/posts/1168955041108468/
+
+[www.fast-india.com]
+match = -51.6%%
+title = trực tiếp đá cá lia thia Kiếm tiền bằng cách giới thiệu bạn bè
+url = https://www.fast-india.com/soft/trực tiếp đá cá lia thia.phtml
 
