--- a/images/ruot-nem-korea-140x190x09/config.ini
+++ b/images/ruot-nem-korea-140x190x09/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-140x190x09.html
 lastopen = 2024-06-11 23:28:41
 
 [search]
-lastsearch = 2024-07-21 01:34:49
+lastsearch = 2024-07-21 04:45:43
 
 [www.riotgames.com]
 match = -84.0%%
@@ -17,9 +17,9 @@ title =
 url = https://www.linkedin.com/pulse/how-get-job-korea-non-korean-again-ross-harman
 
 [www.youtube.com]
-match = -25.0%%
-title = Korean VS German🇰🇷🇦🇹🇩🇪
-url = https://www.youtube.com/watch?v=MJWRS6eZ9YE
+match = -72.0%%
+title = (German Phrase 33)@SonyYu “I am from Korea” in German
+url = https://www.youtube.com/watch?v=O9PvCvIBlAI
 
 [www.diepxuan.com]
 match = 60.0%%
@@ -115,4 +115,9 @@ url = https://www.ef.com/wwen/learn-a-language/korean/
 match = 0.0%%
 title = 
 url = https://www.internations.org/south-korea-expats/guide/working
+
+[www.reddit.com]
+match = -80.0%%
+title = Buying / Shipping NIKE Korea clothes/Basecaps to Europe
+url = https://www.reddit.com/r/korea/comments/99bfch/buying_shipping_nike_korea_clothesbasecaps_to/
 
