--- a/images/chieu-lac-gam-18/config.ini
+++ b/images/chieu-lac-gam-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-18.html
 lastopen = 2024-06-09 23:47:34
 
 [search]
-lastsearch = 2024-07-21 12:18:21
+lastsearch = 2024-07-21 12:45:09
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -382,9 +382,9 @@ title = Chương 18: Lạc Hoa Lưu Thủy - Cổng ...
 url = https://docln.net/truyen/16494-noi-phien-muon-cua-cong-chua-ma-ca-rong-hikikomori/c135951-chuong-18-lac-hoa-luu-thuy
 
 [atgt.baogiaothong.vn]
-match = -218.8%%
-title = Cấm xe qua cầu Trà Khúc 2: Tài xế lạc đường, giao thông ùn tắc
-url = https://atgt.baogiaothong.vn/cam-xe-qua-cau-tra-khuc-2-tai-xe-lac-duong-giao-thong-un-tac-192240718182310498.htm
+match = -225.0%%
+title = Hai xe máy va chạm, nam thanh niên lọt gầm xe container, tử ...
+url = https://atgt.baogiaothong.vn/hai-xe-may-va-cham-nam-thanh-nien-lot-gam-xe-container-tu-vong-thuong-tam-192240717185539446.htm
 
 [www.cantho.gov.vn]
 match = -6.2%%
@@ -550,4 +550,9 @@ url = https://advertisingvietnam.com/4-chien-dich-noi-bat-tuan-qua-heinz-hop-tac
 match = -75.0%%
 title = Thích Không Chiếu: NHỔ ĐINH THÁO CHỐT
 url = https://tanhkhong.org/p105a1654/11/thich-khong-chieu-nho-dinh-thao-chot
+
+[volam2.zing.vn]
+match = -193.8%%
+title = Võ Lâm Truyền Kỳ 2 | Game Online Kiếm Hiệp Nhập Vai Hay
+url = https://volam2.zing.vn/index.html
 
