--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-07-21 11:21:41
+lastsearch = 2024-07-21 12:51:31
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -63,8 +63,8 @@ url = https://moveek.com/rap/lotte-kosmo-tay-ho/
 
 [baolongan.vn]
 match = -31.2%%
-title = Nhớ nghề dệt chiếu quê tôi
-url = https://baolongan.vn/nho-nghe-det-chieu-que-toi-a168262.html
+title = Giữ nghề dệt chiếu Long Cang
+url = https://baolongan.vn/giu-nghe-det-chieu-long-cang-a169502.html
 
 [www.youtube.com]
 match = -200.0%%
@@ -127,9 +127,9 @@ title = Nghịch lý Lukaku - Thể thao
 url = https://znews.vn/nghich-ly-lukaku-post1483431.html
 
 [vtcnews.vn]
-match = -193.8%%
-title = Dự báo thời tiết TP.HCM ngày 16/7: Mưa dông về chiều ...
-url = https://vtcnews.vn/du-bao-thoi-tiet-tp-hcm-ngay-16-7-mua-dong-ve-chieu-nhiet-do-giam-ar883459.html
+match = -106.2%%
+title = 'Tiểu Maldini' sắp gia nhập Arsenal là ai?
+url = https://vtcnews.vn/tieu-maldini-sap-gia-nhap-arsenal-la-ai-ar884525.html
 
 [vietstock.vn]
 match = -218.8%%
@@ -197,9 +197,9 @@ title = Ngày 16/06: Thánh Anrê Nguyễn Mạnh Tường
 url = https://giaophankontum.com/loi-chua/hanh-cac-thanh/ngay-16-06-thanh-anre-nguyen-manh-tuong-thanh-vinhson-nguyen-manh-tuong-thanh-daminh-nguyen-duc-mao-thanh-daminh-nguyen-duc-nhi-thanh-daminh-nguyen-huy-nguyen-2
 
 [phatsuonline.vn]
-match = -206.2%%
-title = Hà Nội: Ngày tu an lạc tháng 5 năm Giáp Thìn tại chùa Bằng
-url = https://phatsuonline.vn/ha-noi-ngay-tu-an-lac-thang-5-nam-giap-thin-tai-chua-bang-74
+match = -175.0%%
+title = TP. HCM: Các phái đoàn viếng tang Hòa thượng Thích ...
+url = https://phatsuonline.vn/tp-hcm-cac-phai-doan-vieng-tang-hoa-thuong-thich-hue-tri-sang-ngay-21-7-25
 
 [www.facebook.com]
 match = -87.5%%
@@ -535,4 +535,19 @@ url = https://bvhungvuong.vn/danh-cho-benh-nhan/gio-lam-viec-cac-khoa-kham-ngoai
 match = -237.5%%
 title = Thông tin liên hệ hỗ trợ dịch vụ công lĩnh vực Quản lý Xuất ...
 url = https://dichvucong.bocongan.gov.vn/bocongan/tintuc/chitiet?matin=101
+
+[baotainguyenmoitruong.vn]
+match = -162.5%%
+title = Động đất 4.1 độ tại huyện Ngọc Lặc, tỉnh Thanh Hóa
+url = https://baotainguyenmoitruong.vn/dong-dat-4-1-do-tai-huyen-ngoc-lac-tinh-thanh-hoa-377000.html
+
+[dangcongsan.vn]
+match = -225.0%%
+title = Thế giới tuần qua: Bạn bè quốc tế tiếc thương Tổng Bí thư ...
+url = https://dangcongsan.vn/the-gioi/tin-tuc/the-gioi-tuan-qua-ban-be-quoc-te-tiec-thuong-tong-bi-thu-nguyen-phu-trong-673009.html
+
+[www.bienphong.com.vn]
+match = -181.2%%
+title = Áp thấp nhiệt đới sắp mạnh lên thành bão, cả nước có ...
+url = https://www.bienphong.com.vn/ap-thap-nhiet-doi-sap-manh-len-thanh-bao-ca-nuoc-co-mua-dong-ve-chieu-toi-post478439.html
 
