--- a/images/chieu-nhua-thai-binh-16/config.ini
+++ b/images/chieu-nhua-thai-binh-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-thai-binh-16.html
 lastopen = 2024-06-09 23:16:27
 
 [search]
-lastsearch = 2024-07-21 00:46:42
+lastsearch = 2024-07-21 12:45:54
 
 [www.lazada.vn]
 match = -60.9%%
@@ -12,14 +12,14 @@ title = Chiếu Nhựa Thái Lan (1,5m , 1,6m , 1,8mx2m , 1,8mx3m, ...
 url = https://www.lazada.vn/products/chieu-nhua-chieu-nhua-thai-lan-15m-16m-18mx2m-18mx3m18mx4m-2mx2m2-2mx3m-2mx4m-i1552808477.html
 
 [www.facebook.com]
-match = 85.0%%
-title = Chiếu Nhựa Thái Bình
-url = https://www.facebook.com/chieunhuathaibinh/?locale=cs_CZ
+match = 52.2%%
+title = Chiếu Nhựa Thái Bình | Thanh Hóa
+url = https://www.facebook.com/chieunhuathaibinh/
 
 [www.sendo.vn]
-match = 21.7%%
-title = Chiếu nhựa thái bình 1m2 x 2m - chieu1m2
-url = https://www.sendo.vn/chie-u-nhu-a-tha-i-bi-nh-1m2-x-2m-43897245.html
+match = 0.0%%
+title = chiếu nhựa thái bình bền đẹp đủ cỡ - hot32068
+url = https://www.sendo.vn/chie-u-nhu-a-tha-i-bi-nh-ben-dep-du-co-95306137.html
 
 [shopee.vn]
 match = 4.3%%
@@ -37,9 +37,9 @@ title = sản xuất chiếu nhựa
 url = https://www.yellowpages.vn/tgcls/40490435/sản-xuất-chiếu-nhựa.html?j=3
 
 [m.facebook.com]
-match = -69.6%%
-title = Tổng kho chiếu nhựa - sỉ lẻ chiếu nhựa Thái Bình | Thai Binh
-url = https://m.facebook.com/61552781727977/
+match = 4.3%%
+title = Xưởng chiếu nhựa Thái bình 2023 | Thai Binh
+url = https://m.facebook.com/CHIEUNHUAHATRANG/
 
 [sangothaibinh.com]
 match = 47.8%%
