--- a/images/ga-chun-dreamland-150x190-ct/config.ini
+++ b/images/ga-chun-dreamland-150x190-ct/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ga-chun-dreamland-150x190-ct.html
 lastopen = 2024-06-07 00:24:00
 
 [search]
-lastsearch = 2024-07-21 06:34:50
+lastsearch = 2024-07-21 12:50:27
 
 [www.diepxuan.com]
-match = 0.0%%
-title = Bộ ga chun chần MC20208 180x200 - Điệp Xuân
-url = https://www.diepxuan.com/bo-ga-chun-chan-mc20208-180x200.html
+match = 21.4%%
+title = Vỏ chănDreamLand 260x230 KS - Điệp Xuân
+url = https://www.diepxuan.com/vo-chandreamland-260x230-ks.html
 
 [www.qcyc.ca]
 match = -53.6%%
