--- a/images/man-in-hoa-dep-18/config.ini
+++ b/images/man-in-hoa-dep-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-18.html
 lastopen = 2024-06-10 01:12:42
 
 [search]
-lastsearch = 2024-07-21 11:20:12
+lastsearch = 2024-07-21 12:45:42
 
 [idfpr.illinois.gov]
 match = -170.6%%
@@ -112,9 +112,9 @@ title = The 2023 Florida Statutes (including Special Session C)
 url = http://www.leg.state.fl.us/statutes/index.cfm?App_mode=Display_Statute&URL=0700-0799/0720/Sections/0720.303.html
 
 [www.flsenate.gov]
-match = -147.1%%
-title = CS/CS/HB 919 Homeowners' Associations SPONSOR(S)
-url = https://www.flsenate.gov/Session/Bill/2023/919/Analyses/h0919b.COM.PDF
+match = -70.6%%
+title = Chapter 720 - 2023 Florida Statutes
+url = https://www.flsenate.gov/Laws/Statutes/2023/Chapter720/All
 
 [www.navy.mil]
 match = -23.5%%
@@ -460,4 +460,14 @@ url = https://www.freep.com/story/news/local/michigan/2024/06/24/hoa-michigan-ru
 match = -5.9%%
 title = Changes coming to HOA rules
 url = https://winknews.com/2024/06/06/changes-coming-to-hoa-rules/
+
+[www.statesman.com]
+match = 0.0%%
+title = 
+url = https://www.statesman.com/story/news/state/2024/05/08/hoa-texas-laws-2024-homeowners-association-fines-fees-penalties-complaints/73599110007/
+
+[www.osha.gov]
+match = -147.1%%
+title = Home | Occupational Safety and Health Administration
+url = https://www.osha.gov/
 
