--- a/images/man-tu-bung-dinh-vuong-16/config.ini
+++ b/images/man-tu-bung-dinh-vuong-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-dinh-vuong-16.html
 lastopen = 2024-06-06 16:41:48
 
 [search]
-lastsearch = 2024-07-20 23:52:34
+lastsearch = 2024-07-21 12:46:58
 
 [munghoangphat.com]
 match = 48.0%%
@@ -13,18 +13,18 @@ url = https://munghoangphat.com/man-chup-dinh-vuong-tu-bung/
 
 [tiki.vn]
 match = -28.0%%
-title = Mùng chụp tự bung đỉnh vuông , Màn chụp chống muỗi ...
-url = https://tiki.vn/mung-chup-tu-bung-dinh-vuong-man-chup-chong-muoi-tien-dat-p139949485.html?spid=163172042
+title = Màn bung 16m có đáy hàng chính hãng, giao nhanh
+url = https://tiki.vn/search?q=màn bung 16m có đáy
 
 [shopee.vn]
-match = -28.0%%
-title = màn chụp vuông giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=màn chụp vuông
+match = -48.0%%
+title = Màn chụp vuông - Giá Tốt, Sale Tháng 07, Ship 0 Đồng
+url = https://shopee.vn/list/màn chụp/vuông
 
 [www.mungbaobao.com]
-match = -32.0%%
-title = Mùng Bảo Bảo | Mùng Chụp Tự Bung Đỉnh Vuông Giá tốt 2024
-url = https://www.mungbaobao.com/
+match = 0.0%%
+title = 
+url = https://www.mungbaobao.com/mung-chup-tu-bung-dinh-vuong-1m6-x-2m.html
 
 [www.diepxuan.com]
 match = 100.0%%
