--- a/images/nem-caosu-thien-nhien-140x200x10-felix/config.ini
+++ b/images/nem-caosu-thien-nhien-140x200x10-felix/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-caosu-thien-nhien-140x200x10-felix.html
 lastopen = 2024-06-07 00:21:32
 
 [search]
-lastsearch = 2024-07-21 11:44:20
+lastsearch = 2024-07-21 12:47:10
 
 [thefelix.vn]
-match = -2.6%%
-title = Nệm cao su Felix Comfort - Độ cứng tiêu chuẩn (Cấp độ 1)
-url = https://thefelix.vn/products/nem-cao-su-felix-premium-comfort-10cm
+match = -50.0%%
+title = Nệm Cao Su Felix
+url = https://thefelix.vn/collections/nem-cao-su-felix
 
 [nemkhanganh.com]
 match = 47.4%%
@@ -17,9 +17,9 @@ title = Nệm cao su thiên nhiên Felix - Nệm Khang Anh
 url = https://nemkhanganh.com/san-pham/nem-cao-su-thien-nhien-felix/
 
 [www.facebook.com]
-match = 13.3%%
-title = Felix - Nệm cao su thiên nhiên
-url = https://www.facebook.com/100068434838834/photos/779771647647323/
+match = 31.6%%
+title = Felix - Nệm cao su thiên nhiên | Ho Chi Minh City
+url = https://www.facebook.com/thefelix.vn/
 
 [shopee.vn]
 match = 36.8%%
