--- a/images/tham-ghe-da/config.ini
+++ b/images/tham-ghe-da/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ghe-da.html
 lastopen = 2024-06-07 00:36:37
 
 [search]
-lastsearch = 2024-07-21 09:51:23
+lastsearch = 2024-07-21 12:51:41
 
 [www.amazon.com]
 match = -309.1%%
@@ -102,9 +102,9 @@ title = BÀN GHẾ ĐÁ THỦ ĐỨC – GIAO HÀNG MIỄN PHÍ TẬN NƠI
 url = https://ghedatruongan.com/ban-ghe-da-thu-duc/
 
 [www.lazada.vn]
-match = -136.4%%
-title = Thảm Lót Ghế Sofa Da Giá Tốt T05/2024
-url = https://www.lazada.vn/tag/tham-lot-ghe-sofa-da/
+match = -154.5%%
+title = Thảm Lông Cừu Lót Ghế Giá Tốt T06/2024
+url = https://www.lazada.vn/tag/tham-long-cuu-lot-ghe/
 
 [richhome.vn]
 match = -190.9%%
