--- a/images/tham-giuong-ii-150x190/config.ini
+++ b/images/tham-giuong-ii-150x190/config.ini
@@ -8,13 +8,13 @@ lastsearch = 2024-07-21 13:35:53
 
 [demxanh.com]
 match = -22.7%%
-title = Thảm trải giường cao su non màu xanh nhạt
-url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-xanh-nhat.html
+title = Thảm trải giường lông cừu TLC 06 - Hà Nội
+url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-06.html
 
 [demre.com.vn]
 match = 18.2%%
-title = Thảm ghế thảm giường - Trang 5
-url = https://demre.com.vn/tham-ghe-tham-giuong?sortby=price-desc&page=5
+title = Thảm ghế thảm giường - Trang 4
+url = https://demre.com.vn/tham-ghe-tham-giuong?sortby=created-desc&page=4
 
 [decoviet.vn]
 match = 22.2%%
