--- a/images/vo-chan-ks-uc-24-23/config.ini
+++ b/images/vo-chan-ks-uc-24-23/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-24-23.html
 lastopen = 2024-06-10 00:37:18
 
 [search]
-lastsearch = 2024-07-21 02:43:46
+lastsearch = 2024-07-21 13:51:59
 
 [gobearcats.com]
 match = -142.1%%
@@ -57,9 +57,9 @@ title = Banking Act Unclaimed Money as at 31 December 2007
 url = https://download.asic.gov.au/media/1314541/ASIC40A_08.pdf
 
 [www2.ed.gov]
-match = -126.3%%
-title = Candidates for the US Presidential Scholars Program
-url = https://www2.ed.gov/programs/psp/2023/candidates.pdf
+match = 0.0%%
+title = 
+url = https://www2.ed.gov/programs/psp/select.html
 
 [www.lumiere-education.com]
 match = 0.0%%
@@ -252,9 +252,9 @@ title = Conference Schedule | C.elegans Development, Cell Biology ...
 url = https://conferences.union.wisc.edu/cedevelopment/program-info/conference-schedule/
 
 [profiles.ucsf.edu]
-match = 5.3%%
-title = Arun Wiita, MD, PhD
-url = https://profiles.ucsf.edu/arun.wiita
+match = -5.3%%
+title = Alexander Marson, MD, PhD
+url = https://profiles.ucsf.edu/alexander.marson
 
 [profiles.stanford.edu]
 match = -36.8%%
