--- a/images/vo-goi-bears-45x65/config.ini
+++ b/images/vo-goi-bears-45x65/config.ini
@@ -4,16 +4,16 @@ url = https://www.diepxuan.com/vo-goi-bears-45x65.html
 lastopen = 2024-07-01 17:35:59
 
 [search]
-lastsearch = 2024-07-21 11:22:23
+lastsearch = 2024-07-21 13:51:29
 
 [everonvn.com.vn]
-match = -111.1%%
-title = Bảng Giá Vỏ Gối Hàn Quốc Everon Est-20034 Màu Tím
-url = https://everonvn.com.vn/everon/4749/vo-goi-everon-est-20034
+match = -11.1%%
+title = Bộ Everon Ep1831 - Curtis
+url = https://everonvn.com.vn/everon/630/bo-everon-ep1831
 
 [www.lazada.vn]
-match = -172.2%%
-title = 【Ready】⚡ Vỏ gối nằm vỏ gối đầu kích thước 45x65 được chọn ...
+match = -144.4%%
+title = 【Ready】⚡ Vỏ gối nằm vỏ gối đầu kích thước 45x65 được ...
 url = https://www.lazada.vn/products/ready-vo-goi-nam-vo-goi-dau-kich-thuoc-45x65-duoc-chon-mau-i2364886208.html
 
 [www.reddit.com]
@@ -37,13 +37,13 @@ title = Vỏ gối kê xoa 45x65 - Điệp Xuân
 url = https://www.diepxuan.com/vo-goi-ke-xoa-45x65.html
 
 [www.everonqb.com]
-match = -38.9%%
-title = Everon Quảng Bình Vỏ gối EP1823 BEARS 45x65
+match = -105.6%%
+title = Vỏ gối EP1823 BEARS 45x65 - Everon Quảng Bình Trang Chủ
 url = https://www.everonqb.com/vo-goi-ep1823-bears-45x65.html
 
 [shopee.vn]
-match = -127.8%%
-title = GA TRẦN BỌC NỆM THÊU GẤU TEDDY XINH XẮN ĐỦ 3size
+match = -116.7%%
+title = GA TRẦN BỌC NỆM THÊU GẤU TEDDY XINH XẮN ĐỦ ...
 url = https://shopee.vn/product/146440345/13756241998?gsht=StznoKFCWptXK5Vt
 
 [sieuthicholon.com]
